fixed gaps

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,7 +18,7 @@ footer {
 
 /* --- Wrapper Sections --- */
 .footer-social-wrapper {
-  padding: 25px 0;
+  padding: 15px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -27,7 +27,6 @@ footer {
 .footer-links-wrapper {
   padding: 35px 0 30px;
   display: grid;
-  gap: 30px;
 }
 
 .footer-bottom-wrapper {
